articulos del html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,60 @@
         <!-- Contecnido principal -->
         <section class="content">
             <!-- aqui van las peliculas -->
+            <article class="peli-item">
+                <h3 class="title">Desarrollo web</h3>
+                <p class="description">victorrobles.es</p>
+
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
         </section>
 
+        <section class="content">
+            <!-- aqui van las peliculas -->
+            <article class="peli-item">
+                <h3 class="title">Desarrollo web</h3>
+                <p class="description">victorrobles.es</p>
+
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
+        </section>
+
+        <section class="content">
+            <!-- aqui van las peliculas -->
+            <article class="peli-item">
+                <h3 class="title">Desarrollo web</h3>
+                <p class="description">victorrobles.es</p>
+
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
+        </section>
+
+        <section class="content">
+            <!-- aqui van las peliculas -->
+            <article class="peli-item">
+                <h3 class="title">Desarrollo web</h3>
+                <p class="description">victorrobles.es</p>
+
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
+        </section>
+
+        <section class="content">
+            <!-- aqui van las peliculas -->
+            <article class="peli-item">
+                <h3 class="title">Desarrollo web</h3>
+                <p class="description">victorrobles.es</p>
+
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
+        </section>
+
+        <!-- Barra lateral -->
         <aside class="sidebar">
             <section class="search">
                 <h3 class="title">Buscador</h3>
@@ -48,6 +100,7 @@
             </section>
         </aside>
 
+        <!-- Pie de pagina -->
         <footer>
             &copy; Master en JavasScript EsS12 y TypeScript - <a href="#">https://app-moviesjs.com</a>
         </footer>
