--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Barra de navegacion -->
         <nav class="nav">
             <ul>
-                <li><a href="#">Inicio</a></li>\
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#">Peliculas</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contacto</a></li>
@@ -34,10 +34,7 @@
                 <button class="edit">Editar</button>
                 <button class="delete">Borrar</button>
             </article>
-        </section>
 
-        <section class="content">
-            <!-- aqui van las peliculas -->
             <article class="peli-item">
                 <h3 class="title">Desarrollo web</h3>
                 <p class="description">victorrobles.es</p>
@@ -45,10 +42,7 @@
                 <button class="edit">Editar</button>
                 <button class="delete">Borrar</button>
             </article>
-        </section>
 
-        <section class="content">
-            <!-- aqui van las peliculas -->
             <article class="peli-item">
                 <h3 class="title">Desarrollo web</h3>
                 <p class="description">victorrobles.es</p>
@@ -56,21 +50,7 @@
                 <button class="edit">Editar</button>
                 <button class="delete">Borrar</button>
             </article>
-        </section>
 
-        <section class="content">
-            <!-- aqui van las peliculas -->
-            <article class="peli-item">
-                <h3 class="title">Desarrollo web</h3>
-                <p class="description">victorrobles.es</p>
-
-                <button class="edit">Editar</button>
-                <button class="delete">Borrar</button>
-            </article>
-        </section>
-
-        <section class="content">
-            <!-- aqui van las peliculas -->
             <article class="peli-item">
                 <h3 class="title">Desarrollo web</h3>
                 <p class="description">victorrobles.es</p>
@@ -101,7 +81,7 @@
         </aside>
 
         <!-- Pie de pagina -->
-        <footer>
+        <footer class="footer">
             &copy; Master en JavasScript EsS12 y TypeScript - <a href="#">https://app-moviesjs.com</a>
         </footer>
 
