logo del header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <section class="layout">
         <!-- Cebecera -->
         <header class="header">
+            <section class="logo">
+                <section class="play"></section>
+            </section>
             <h1>MisPelis</h1>
         </header>
 
